<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="board">Board</string>
    <string name="unplanned">Unplanned</string>
    <string name="timeline">Timeline</string>
    <string name="workspace">Workspace</string>
    <string name="task_title">Task title</string>
    <string name="description">Description</string>
    <string name="project">Select project</string>
    <string name="date">Date</string>
    <string name="time">Add time</string>
    <string name="add_reminder">Add reminder</string>
    <string name="priority">Set priority</string>
    <string name="subtasks">Add subtasks</string>
    <string name="assign_tags">Assign tags</string>
    <string name="add_task">Add task</string>
    <string name="task_detail">Task detail</string>
    <string name="date_format">%02d/%02d/%d</string>
    <string name="time_format">%02d:%02d</string>
    <string name="create_project">Create project</string>
    <string name="project_name">Project name</string>
    <string name="select_a_priority">Select a priority</string>
    <string name="urgent">Urgent</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="priority_selected">Priority - %s</string>
    <string name="all">All</string>
    <string name="project_detail">Project detail</string>
    <string name="create_task">Create task</string>
    <string name="subtask_name">Subtask name</string>
    <string name="delete">Delete</string>
    <string name="delete_project_alert">Are you sure you want to delete this project?</string>
    <string name="create_a_task">Create a task</string>
    <string name="create_a_project">Create a project</string>
    <string name="search">Search</string>
    <string name="delete_task">Delete task</string>
    <string name="delete_task_alert">Are you sure you want to delete this task?</string>
    <string name="save">Save</string>
    <string name="save_task_alert">Are you sure you want to save changes?</string>
    <string name="progress">%d/%d</string>
    <string name="progress_percent">%d%%</string>
    <string name="completed_tasks">Completed tasks (%s)</string>
    <string name="reminder">%2d hours, %d minutes before</string>
    <string name="select_sort_order">Select sort order</string>
    <string name="due_date_old_new">Due date (old -> new)</string>
    <string name="due_date_new_old">Due date (new -> old)</string>
    <string name="created_old_new">Created (old -> new) - Manual</string>
    <string name="created_new_old">Created (new -> old)</string>
    <string name="priority_high_low">Priority (high -> low)</string>
    <string name="alphabetical_a_z">Alphabetical (A -> Z)</string>
    <string name="select_a_project">Select a project</string>
    <string name="sort_by">Sort by</string>
    <string name="avatar">Avatar</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="add_widget">Add widget</string>
    <string name="statistics">Statistics</string>
    <string name="notification_settings">Notification settings</string>
    <string name="rate_now">Rate now</string>
    <string name="user_guide">User guide</string>
    <string name="help_center">Help center</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="feedback_and_bug_report">Feedback and bug report</string>
    <string name="themes">Themes</string>
    <string name="search_your_tasks">Search your tasks</string>
</resources>